--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -60,7 +60,8 @@
 
 //encabezados
 
-h1{
+
+h1 {
     font-size: $textXXlg;
     background: linear-gradient(
       var(--back-colour1),
@@ -76,11 +77,12 @@ h1{
     padding-top: 20px;
     border-radius: 0 0 5px 5px;
     text-transform: uppercase;
-}
-
-//encabezados segundos
-
-.segundos-titulos{
+  }
+  
+  //encabezados segundos
+  
+  
+  .segundos-titulos{
     background: linear-gradient(
       var(--back-colour1),
       var(--back-colour2),
@@ -88,13 +90,14 @@ h1{
     );
     text-align: center;
     color: whitesmoke;
-    font-weight: 700;
+    font-weight: $textBold;
+    font-size: $textLg;
     padding-top: 10px;
     height: 50px;
     border-radius: 0 0 5px 5px;
     text-transform: uppercase;
     
-}
+  }
 
 //boton
 .btn {
