--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,11 @@ footer a {
   align-items: center;
 }
 
+.proxima-pelicula1:hover {
+  transform: scale(1.1);
+  transition: all 2s;
+}
+
 .img-cartelera {
   height: 480px;
   width: 350px;
